[package]
name = "at-cmux"
version = "0.1.0"
description = "Multiplexes serial channels using the CMUX standard (3GPP TS 27.010)"
keywords = ["embedded", "cmux", "embedded-io-async", "async", "no_std"]
categories = [
    "embedded",
    "hardware-support",
    "no-std::no-alloc",
    "network-programming",
    "asynchronous",
]
license = "MIT OR Apache-2.0"
edition = "2021"
repository = "https://github.com/factbird/at-cmux"
documentation = "https://docs.rs/at-cmux"
readme = "README.md"

[features]
defmt = ["dep:defmt", "embedded-io-async/defmt"]
log = ["dep:log"]

[dependencies]
defmt = { version = "1", optional = true }
log = { version = "0.4", optional = true }

heapless = { version = "0.9", default-features = false }

bitfield-struct = "0.8"

embedded-io-async = "0.7"
embassy-futures = "0.1"
embassy-sync = "0.8"

crc = "3.0"
bbqueue = { git = "https://github.com/jamesmunns/bbqueue", default-features = false, features = [
    "maitake-sync-0_3",
    "critical-section",
] }

[dev-dependencies]
tokio = { version = "1.50", features = ["rt", "macros"] }

[package.metadata.docs.rs]
features = ["defmt"]
